z-index fix for rule

--- a/bundles/LayoutsAdminBundle/Resources/sass/_rules.scss
+++ b/bundles/LayoutsAdminBundle/Resources/sass/_rules.scss
@@ -414,7 +414,7 @@
                 
                 /* Position the tooltip text - see examples below! */
                 position: absolute;
-                z-index: 1;
+                z-index: 11;
 
                 &::after {
                     content: " ";
